Remoção de imagem

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </div>
 
         <div class="col-lg-6 col-lg-offset-3">
-          <p><img class="img-responsive" src="img/Sigelu.jpg" alt=""></p>
+          <p><img class="img-responsive" src="img/Sigelu.JPG" alt=""></p>
         </div>
         <div class="col-lg-3">
           <p>SIGELU</p>
