Adição de resumo e novo projeto

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 				processamento de imagens e visualização de dados.</p>
           </div>
           <div class="col-lg-3">
-            <p><a href="#"><i class="icon-file"></i></a>
-              <sm>DOWNLOAD PDF</sm>
+            <p><a href="https://resume.io/r/HlD5jMtC7" target="_blank"> <sm>RESUMO</sm></a>
+             
             </p>
           </div>
 
@@ -190,7 +190,7 @@
           <t>Analista e Desenvolvedora Full-stack</t><br/> Companhia Municipal de Limpeza Urbana (COMLURB) <br/>
         </p>
         <p>
-          <more>Realizou a atividade de analista de sistemas e desenvolvedora nos
+          <more>Analista de sistemas e desenvolvedora nos
 				projetos que envolviam toda a área operacional da COMLURB. Desde o
 				controle de Frota ao planejamento de eventos e ordens de serviço. Atuando
 				também em projetos referentes a área administrativa.</more>
@@ -284,6 +284,18 @@
           <h5>PROJETOS</h5>
         </div>
         <div class="col-lg-6">
+          <p><img class="img-responsive" src="img/brain.jpg" alt=""></p>
+        </div>
+        <div class="col-lg-3">
+          <p>NEUROVIS</p>
+          <p>
+            <more>Aplicação que visa auxiliar a análise dos dados do Córtex Visual.<br/><br/>
+              <more>Em andamento</more>
+            </more>
+          </p>
+        </div>
+		
+		<div class="col-lg-6 col-lg-offset-3">
           <p><img class="img-responsive" src="img/estacio.png" alt=""></p>
         </div>
         <div class="col-lg-3">
@@ -296,7 +308,7 @@
         </div>
 
         <div class="col-lg-6 col-lg-offset-3">
-          <p><img class="img-responsive" src="img/Sigelu.JPG" alt=""></p>
+          <p><img class="img-responsive" src="img/Sigelu.png" alt=""></p>
         </div>
         <div class="col-lg-3">
           <p>SIGELU</p>
@@ -326,55 +338,18 @@
           </div>
           <div class="col-lg-4">
             <p>
-              <t>Email</t><br/> isabelsalesdca@gmail.com<br/>
-            </p>
-            <p>
               <t>Telefone</t><br/> +55 (21)99752-0058 <br/>
             </p>
-            <p>
-              <t>Redes Sociais</t><br/>
-              <a href="https://github.com/slesbel"><i class="fa fa-github"></i></a>
-              <a href="https://t.me/slesbel"><i class="fa fa-telegram"></i></a>
+			 <p>
+              <t>Email</t><br/> isabelsalesdca@gmail.com<br/>
             </p>
           </div>
-          <div class="col-lg-6">
-            <p>
-              <sm>CONTATO</sm>
+		  <div class="col-lg-4">
+			<p>
+              <t>Redes Sociais</t><br/>
+              <a href="https://github.com/slesbel" target="_blank"><i class="fa fa-github"></i></a>
+              <a href="https://t.me/slesbel" target="_blank"><i class="fa fa-telegram"></i></a>
             </p>
-            <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
-
-              <div class="form-group">
-                <label for="contact-name">Nome</label>
-                <input type="name" name="name" class="form-control" id="contact-name" placeholder="Nome" data-rule="minlen:4" data-msg="Digite pelo menos 4 caracteres">
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <label for="contact-email">Email</label>
-                <input type="email" name="email" class="form-control" id="contact-email" placeholder="Email" data-rule="email" data-msg="Por favor digite um email válido">
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <label for="contact-subject">Assunto</label>
-                <input type="text" name="subject" class="form-control" id="contact-subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Digite pelo menos 8 caracteres do assunto">
-                <div class="validate"></div>
-              </div>
-
-              <div class="form-group">
-                <label for="contact-message">Mensagem</label>
-                <textarea class="form-control" name="message" id="contact-message" placeholder="Mensagem" rows="5" data-rule="required" data-msg="Por favor escreva algo para mim"></textarea>
-                <div class="validate"></div>
-              </div>
-
-              <div class="loading"></div>
-              <div class="error-message"></div>
-              <div class="sent-message">Sua mensagem foi enviada. Obrigado!</div>
-
-              <div class="form-send">
-                <button type="submit" class="btn btn-large">Enviar</button>
-              </div>
-
-            </form>
-
           </div>
         </div>
         <!--/.row -->
@@ -387,17 +362,8 @@
   <div id="copyrights">
     <div class="container">
       <p>
-        &copy; Copyrights <strong>Isabel</strong>. All Rights Reserved
+        &copy; Copyrights <strong>Isabel Sales</strong>. All Rights Reserved
       </p>
-      <div class="credits">
-        <!--
-          You are NOT allowed to delete the credit link to TemplateMag with free version.
-          You can delete the credit link only if you bought the pro version.
-          Buy the pro version with working PHP/AJAX contact form: https://templatemag.com/kelvin-bootstrap-resume-template/
-          Licensing information: https://templatemag.com/license/
-        -->
-        Created with Isabel Sales template by <a href="https://templatemag.com/">TemplateMag</a>
-      </div>
     </div>
   </div>
 
