--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           <h5>PROJETOS</h5>
         </div>
         <div class="col-lg-6">
-          <p><img class="img-responsive" src="img/brain.jpg" alt=""></p>
+          <p><img class="img-responsive" src="img/brain.JPG" alt=""></p>
         </div>
         <div class="col-lg-3">
           <p>NEUROVIS</p>
